src/Lulu2Parser.java
// Generated from C:/Users/ASC/IdeaProjects/LULUProject/src\Lulu2.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Lulu2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SingleLineComment=1, MultiLineComment=2, ALLOCATE=3, BOOL=4, BREAK=5, 
		CASE=6, CONST=7, CONTINUE=8, DECLARE=9, DEFAULT=10, DESTRUCT=11, ELSE=12, 
		FUNCTION=13, FLOAT=14, FOR=15, IF=16, INT=17, NIL=18, OF=19, PRIVATE=20, 
		PROTECTED=21, PUBLIC=22, READ=23, RETURN=24, STRING=25, SUPER=26, SWITCH=27, 
		THIS=28, TYPE=29, WHILE=30, WRITE=31, EQUAL=32, NotEqual=33, LessThanOrEqual=34, 
		LessThan=35, BiggerThan=36, BiggerThanOrEqual=37, BitwiseNegation=38, 
		BitwiseOr=39, BitwiseAnd=40, BitwiseLogicalXor=41, LogicalOr=42, LogicalAnd=43, 
		LogicalNot=44, SUBTRACTION=45, ADDITION=46, MULTIPLICATION=47, DIVISION=48, 
		MODULUS=49, ASSIGN=50, OpenCurlyBrace=51, CloseCurlyBrace=52, OpenPar=53, 
		ClosePar=54, OpenBrace=55, CloseBrace=56, DOT=57, COMMA=58, COLON=59, 
		SEMICOLON=60, IntLiteral=61, FloatLiteral=62, StringLiteral=63, BoolLiteral=64, 
		ID=65, WhiteSpace=66;
	public static final int
		RULE_main = 0, RULE_ftDcl = 1, RULE_funcDcl = 2, RULE_args = 3, RULE_argsVar = 4, 
		RULE_typeDcl = 5, RULE_varDef = 6, RULE_varVal = 7, RULE_ftDef = 8, RULE_typeDef = 9, 
		RULE_component = 10, RULE_accessModifier = 11, RULE_funcDef = 12, RULE_block = 13, 
		RULE_stmt = 14, RULE_assign = 15, RULE_var = 16, RULE_ref = 17, RULE_expr = 18, 
		RULE_funcCall = 19, RULE_list = 20, RULE_handleCall = 21, RULE_params = 22, 
		RULE_condStmt = 23, RULE_loopStmt = 24, RULE_type = 25, RULE_constVal = 26, 
		RULE_unaryOp = 27, RULE_firstLevelBinaryArithmeticOp = 28, RULE_secondLevelBinaryArithmeticOp = 29, 
		RULE_firstLevelBinaryRelationalOp = 30, RULE_secondLevelBinaryRelationalOp = 31;
	public static final String[] ruleNames = {
		"main", "ftDcl", "funcDcl", "args", "argsVar", "typeDcl", "varDef", "varVal", 
		"ftDef", "typeDef", "component", "accessModifier", "funcDef", "block", 
		"stmt", "assign", "var", "ref", "expr", "funcCall", "list", "handleCall", 
		"params", "condStmt", "loopStmt", "type", "constVal", "unaryOp", "firstLevelBinaryArithmeticOp", 
		"secondLevelBinaryArithmeticOp", "firstLevelBinaryRelationalOp", "secondLevelBinaryRelationalOp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'allocate'", "'bool'", "'break'", "'case'", "'const'", 
		"'continue'", "'declare'", "'default'", "'destruct'", "'else'", "'function'", 
		"'float'", "'for'", "'if'", "'int'", "'nil'", "'of'", "'private'", "'protected'", 
		"'public'", "'read'", "'return'", "'StringType'", "'super'", "'switch'", "'this'",
		"'type'", "'while'", "'write'", "'=='", "'!='", "'<='", "'<'", "'>'", 
		"'>='", "'~'", "'|'", "'&'", "'^'", "'||'", "'&&'", "'!'", "'-'", "'+'", 
		"'*'", "'/'", "'%'", "'='", "'{'", "'}'", "'('", "')'", "'['", "']'", 
		"'.'", "','", "':'", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SingleLineComment", "MultiLineComment", "ALLOCATE", "BOOL", "BREAK", 
		"CASE", "CONST", "CONTINUE", "DECLARE", "DEFAULT", "DESTRUCT", "ELSE", 
		"FUNCTION", "FLOAT", "FOR", "IF", "INT", "NIL", "OF", "PRIVATE", "PROTECTED", 
		"PUBLIC", "READ", "RETURN", "STRING", "SUPER", "SWITCH", "THIS", "TYPE", 
		"WHILE", "WRITE", "EQUAL", "NotEqual", "LessThanOrEqual", "LessThan", 
		"BiggerThan", "BiggerThanOrEqual", "BitwiseNegation", "BitwiseOr", "BitwiseAnd", 
		"BitwiseLogicalXor", "LogicalOr", "LogicalAnd", "LogicalNot", "SUBTRACTION", 
		"ADDITION", "MULTIPLICATION", "DIVISION", "MODULUS", "ASSIGN", "OpenCurlyBrace", 
		"CloseCurlyBrace", "OpenPar", "ClosePar", "OpenBrace", "CloseBrace", "DOT", 
		"COMMA", "COLON", "SEMICOLON", "IntLiteral", "FloatLiteral", "StringLiteral", 
		"BoolLiteral", "ID", "WhiteSpace"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lulu2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Lulu2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(Lulu2Parser.EOF, 0); }
		public FtDclContext ftDcl() {
			return getRuleContext(FtDclContext.class,0);
		}
		public List<FtDefContext> ftDef() {
			return getRuleContexts(FtDefContext.class);
		}
		public FtDefContext ftDef(int i) {
			return getRuleContext(FtDefContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lulu2Visitor ) return ((Lulu2Visitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECLARE) {
				{
				setState(64);
				ftDcl();
				}
			}

			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				ftDef();
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNCTION) | (1L << TYPE) | (1L << OpenPar))) != 0) );
			setState(72);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FtDclContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(Lulu2Parser.DECLARE, 0); }
		public TerminalNode OpenCurlyBrace() { return getToken(Lulu2Parser.OpenCurlyBrace, 0); }
		public TerminalNode CloseCurlyBrace() { return getToken(Lulu2Parser.CloseCurlyBrace, 0); }
		public List<FuncDclContext> funcDcl() {
			return getRuleContexts(FuncDclContext.class);
		}
		public FuncDclContext funcDcl(int i) {
			return getRuleContext(FuncDclContext.class,i);
		}
		public List<TypeDclContext> typeDcl() {
			return getRuleContexts(TypeDclContext.class);
		}
		public TypeDclContext typeDcl(int i) {
			return getRuleContext(TypeDclContext.class,i);
		}
		public List<VarDefContext> varDef() {
			return getRuleContexts(VarDefContext.class);
		}
		public VarDefContext varDef(int i) {
			return getRuleContext(VarDefContext.class,i);
		}
		public FtDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ftDcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).enterFtDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).exitFtDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lulu2Visitor ) return ((Lulu2Visitor<? extends T>)visitor).visitFtDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FtDclContext ftDcl() throws RecognitionException {
		FtDclContext _localctx = new FtDclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ftDcl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(DECLARE);
			setState(75);
			match(OpenCurlyBrace);
			setState(79); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(79);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(76);
					funcDcl();
					}
					break;
				case 2:
					{
					setState(77);
					typeDcl();
					}
					break;
				case 3:
					{
					setState(78);
					varDef();
					}
					break;
				}
				}
				setState(81); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 4)) & ~0x3f) == 0 && ((1L << (_la - 4)) & ((1L << (BOOL - 4)) | (1L << (CONST - 4)) | (1L << (FLOAT - 4)) | (1L << (INT - 4)) | (1L << (STRING - 4)) | (1L << (OpenPar - 4)) | (1L << (ID - 4)))) != 0) );
			setState(83);
			match(CloseCurlyBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncDclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(Lulu2Parser.ID, 0); }
		public List<TerminalNode> OpenPar() { return getTokens(Lulu2Parser.OpenPar); }
		public TerminalNode OpenPar(int i) {
			return getToken(Lulu2Parser.OpenPar, i);
		}
		public List<TerminalNode> ClosePar() { return getTokens(Lulu2Parser.ClosePar); }
		public TerminalNode ClosePar(int i) {
			return getToken(Lulu2Parser.ClosePar, i);
		}
		public TerminalNode SEMICOLON() { return getToken(Lulu2Parser.SEMICOLON, 0); }
		public List<ArgsContext> args() {
			return getRuleContexts(ArgsContext.class);
		}
		public ArgsContext args(int i) {
			return getRuleContext(ArgsContext.class,i);
		}
		public TerminalNode ASSIGN() { return getToken(Lulu2Parser.ASSIGN, 0); }
		public ArgsVarContext argsVar() {
			return getRuleContext(ArgsVarContext.class,0);
		}
		public FuncDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).enterFuncDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).exitFuncDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lulu2Visitor ) return ((Lulu2Visitor<? extends T>)visitor).visitFuncDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDclContext funcDcl() throws RecognitionException {
		FuncDclContext _localctx = new FuncDclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcDcl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OpenPar) {
				{
				setState(85);
				match(OpenPar);
				setState(86);
				args(0);
				setState(87);
				match(ClosePar);
				setState(88);
				match(ASSIGN);
				}
			}

			setState(92);
			match(ID);
			setState(93);
			match(OpenPar);
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(94);
				args(0);
				}
				break;
			case 2:
				{
				setState(95);
				argsVar(0);
				}
				break;
			}
			setState(98);
			match(ClosePar);
			setState(99);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> OpenBrace() { return getTokens(Lulu2Parser.OpenBrace); }
		public TerminalNode OpenBrace(int i) {
			return getToken(Lulu2Parser.OpenBrace, i);
		}
		public List<TerminalNode> CloseBrace() { return getTokens(Lulu2Parser.CloseBrace); }
		public TerminalNode CloseBrace(int i) {
			return getToken(Lulu2Parser.CloseBrace, i);
		}
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(Lulu2Parser.COMMA, 0); }
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).enterArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).exitArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lulu2Visitor ) return ((Lulu2Visitor<? extends T>)visitor).visitArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		return args(0);
	}

	private ArgsContext args(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArgsContext _localctx = new ArgsContext(_ctx, _parentState);
		ArgsContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_args, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(102);
			type();
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(103);
					match(OpenBrace);
					setState(104);
					match(CloseBrace);
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
			_ctx.stop = _input.LT(-1);
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ArgsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_args);
					setState(110);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(111);
					match(COMMA);
					setState(112);
					type();
					setState(117);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(113);
							match(OpenBrace);
							setState(114);
							match(CloseBrace);
							}
							} 
						}
						setState(119);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
					}
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ArgsVarContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(Lulu2Parser.ID, 0); }
		public List<TerminalNode> OpenBrace() { return getTokens(Lulu2Parser.OpenBrace); }
		public TerminalNode OpenBrace(int i) {
			return getToken(Lulu2Parser.OpenBrace, i);
		}
		public List<TerminalNode> CloseBrace() { return getTokens(Lulu2Parser.CloseBrace); }
		public TerminalNode CloseBrace(int i) {
			return getToken(Lulu2Parser.CloseBrace, i);
		}
		public ArgsVarContext argsVar() {
			return getRuleContext(ArgsVarContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(Lulu2Parser.COMMA, 0); }
		public ArgsVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argsVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).enterArgsVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).exitArgsVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lulu2Visitor ) return ((Lulu2Visitor<? extends T>)visitor).visitArgsVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsVarContext argsVar() throws RecognitionException {
		return argsVar(0);
	}

	private ArgsVarContext argsVar(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArgsVarContext _localctx = new ArgsVarContext(_ctx, _parentState);
		ArgsVarContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_argsVar, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(126);
			type();
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OpenBrace) {
				{
				{
				setState(127);
				match(OpenBrace);
				setState(128);
				match(CloseBrace);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(ID);
			}
			_ctx.stop = _input.LT(-1);
			setState(150);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ArgsVarContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_argsVar);
					setState(136);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(137);
					match(COMMA);
					setState(138);
					type();
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==OpenBrace) {
						{
						{
						setState(139);
						match(OpenBrace);
						setState(140);
						match(CloseBrace);
						}
						}
						setState(145);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(146);
					match(ID);
					}
					} 
				}
				setState(152);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class TypeDclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(Lulu2Parser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(Lulu2Parser.SEMICOLON, 0); }
		public TypeDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).enterTypeDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).exitTypeDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lulu2Visitor ) return ((Lulu2Visitor<? extends T>)visitor).visitTypeDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDclContext typeDcl() throws RecognitionException {
		TypeDclContext _localctx = new TypeDclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeDcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(ID);
			setState(154);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<VarValContext> varVal() {
			return getRuleContexts(VarValContext.class);
		}
		public VarValContext varVal(int i) {
			return getRuleContext(VarValContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(Lulu2Parser.SEMICOLON, 0); }
		public TerminalNode CONST() { return getToken(Lulu2Parser.CONST, 0); }
		public List<TerminalNode> COMMA() { return getTokens(Lulu2Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Lulu2Parser.COMMA, i);
		}
		public VarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).enterVarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Lulu2Listener ) ((Lulu2Listener)listener).exitVarDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Lulu2Visitor ) return ((Lulu2Visitor<? extends T>)visitor).visitVarDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefContext varDef() throws RecognitionException {
		VarDefContext _localctx = new VarDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(156);
				match(CONST);
				}
			}

			setState(159);
			type();
			setState(160);
			varVal();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(161);
				match(COMMA);
				setState(162);
				varVal();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(168);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
